# remote-management

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
inc/: remote_management_service.h
inc/private/: inc_private.h  remote_management_service_private.h
src/: main.c  remote_management_thread.c
src/core/: remote_management_service.c
